set(RENDER_HEADERS
        ${PROJECT_SOURCE_DIR}/render/core/CoreInitializer.h
        ${PROJECT_SOURCE_DIR}/render/core/editing/CompositionUnderline.h
        ${PROJECT_SOURCE_DIR}/render/core/editing/CompositionUnderlineRangeFilter.h
        ${PROJECT_SOURCE_DIR}/render/core/editing/PositionWithAffinity.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/BidiRun.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/BidiRunForLine.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/ClipPathOperation.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/ClipRect.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/ClipRects.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/ClipRectsCache.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/GapRects.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/HitTestLocation.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/HitTestRequest.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/HitTestResult.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/HitTestingTransformState.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/InlineBox.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/InlineFlowBox.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/InlineIterator.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/InlineTextBox.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/LayerPaintingInfo.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/OrderIterator.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/PaintInfo.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/PointerEventsHitRules.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderBlock.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderBox.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderBoxModelObject.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderFlexibleBox.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderGeometryMap.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderGeometryMapStep.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderInline.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLayer.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLayerClipper.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLayerStackingNode.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLayerStackingNodeIterator.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLineBoxList.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderObject.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderObjectChildList.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderObjectInlines.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderOverflow.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderParagraph.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderReplaced.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderImage.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderImageResource.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderText.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderTheme.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderTreeAsText.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderView.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RootInlineBox.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/ScrollAlignment.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/SubtreeLayoutScope.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/TextRunConstructor.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/VerticalPositionCache.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderSliver.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderPlatformView.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderTexture.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderSliverHeader.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderSliverBody.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderScrollView.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderSlider.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/break_lines.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/BreakingContextInlineHeaders.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/LineBreaker.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/LineInfo.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/LineLayoutState.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/LineWidth.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/RenderTextInfo.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/TrailingObjects.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/WordMeasurement.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/AppliedTextDecoration.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/BorderData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/BorderValue.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/CounterDirectives.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/DataEquivalency.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/DataRef.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/FillLayer.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/OutlineValue.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/RenderStyle.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/RenderStyleConstants.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/ShadowData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/ShadowList.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/ShapeValue.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleBackgroundData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleBoxData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleColor.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleDifference.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleFilterData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleFlexibleBoxData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleImage.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleUrlImage.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleGradientImage.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleInheritedData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleRareInheritedData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleRareNonInheritedData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleSurroundData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleTransformData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleVisualData.h
        ${PROJECT_SOURCE_DIR}/render/core/rendering/image/ImageResource.h
        ${PROJECT_SOURCE_DIR}/render/platform/CalculationValue.h
        ${PROJECT_SOURCE_DIR}/render/platform/Decimal.h
        ${PROJECT_SOURCE_DIR}/render/platform/FloatConversion.h
        ${PROJECT_SOURCE_DIR}/render/platform/Language.h
        ${PROJECT_SOURCE_DIR}/render/platform/LayoutUnit.h
        ${PROJECT_SOURCE_DIR}/render/platform/Length.h
        ${PROJECT_SOURCE_DIR}/render/platform/LengthBox.h
        ${PROJECT_SOURCE_DIR}/render/platform/LengthFunctions.h
        ${PROJECT_SOURCE_DIR}/render/platform/LengthPoint.h
        ${PROJECT_SOURCE_DIR}/render/platform/LengthSize.h
        ${PROJECT_SOURCE_DIR}/render/platform/NotImplemented.h
        ${PROJECT_SOURCE_DIR}/render/platform/Partitions.h
        ${PROJECT_SOURCE_DIR}/render/platform/PlatformExport.h
        ${PROJECT_SOURCE_DIR}/render/platform/PurgeableVector.h
        ${PROJECT_SOURCE_DIR}/render/platform/SharedBuffer.h
        ${PROJECT_SOURCE_DIR}/render/platform/animation/AnimationUtilities.h
        ${PROJECT_SOURCE_DIR}/render/platform/animation/AnimationValue.h
        ${PROJECT_SOURCE_DIR}/render/platform/animation/KeyframeValueList.h
        ${PROJECT_SOURCE_DIR}/render/platform/animation/TimingFunction.h
        ${PROJECT_SOURCE_DIR}/render/platform/animation/UnitBezier.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/AlternateFontFamily.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/Character.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/CustomFontData.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FixedPitchFontType.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/Font.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontBaseline.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontCache.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontCacheClient.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontCacheKey.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontCustomPlatformData.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontData.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontDataCache.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontDescription.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontFaceCreationParams.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontFallbackList.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontFamily.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontFeatureSettings.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontMetrics.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontOrientation.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontPlatformData.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontPlatformFeatures.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontRenderStyle.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontSelector.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontSmoothingMode.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontTraits.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontWidthVariant.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/Glyph.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/GlyphBuffer.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/GlyphMetricsMap.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/GlyphPage.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/GlyphPageTreeNode.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/Latin1TextIterator.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/SegmentedFontData.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/SimpleFontData.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/TextBlob.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/TextRenderingMode.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/TypesettingFeatures.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/VDMXParser.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/WidthCache.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/WidthIterator.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/harfbuzz/HarfBuzzFace.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/harfbuzz/HarfBuzzShaper.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/opentype/OpenTypeTypes.h
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/opentype/OpenTypeVerticalData.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatBox.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatBoxExtent.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatPoint.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatPoint3D.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatQuad.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatRect.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatRoundedRect.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatSize.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/IntPoint.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/IntRect.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/IntRectExtent.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/IntSize.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/LayoutBoxExtent.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/LayoutPoint.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/LayoutRect.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/LayoutSize.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/Region.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/RoundedRect.h
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/TransformState.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Color.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ColorSpace.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/DashArray.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/DrawLooperBuilder.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/FrameData.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GeneratedImage.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Gradient.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GradientGeneratedImage.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GraphicsContext.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GraphicsContextState.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GraphicsContextStateSaver.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GraphicsTypes.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Image.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/PaintPlatformView.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ImageInfo.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ImageFilter.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ImageObserver.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ImageOrientation.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/StaticTextureImage.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Path.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/PathTraversalState.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Pattern.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/RegionTracker.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/StrokeData.h
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/skia/SkiaUtils.h
        ${PROJECT_SOURCE_DIR}/render/platform/heap/Handle.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/BidiCharacterRun.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/BidiContext.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/BidiResolver.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/BidiRunList.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/BidiTextRun.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/LineEnding.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/LocaleToScriptMapping.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/NonCJKGlyphOrientation.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/SurrogatePairAwareTextIterator.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextBoundaries.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextBox.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextBreakIterator.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextBreakIteratorInternalICU.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextDirection.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextPath.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextRun.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextRunIterator.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextStream.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/UnicodeBidi.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/UnicodeRange.h
        ${PROJECT_SOURCE_DIR}/render/platform/text/UnicodeUtilities.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/AffineTransform.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/IdentityTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/InterpolatedTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/Matrix3DTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/MatrixTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/PerspectiveTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/RotateTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/ScaleTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/SkewTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/TransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/TransformOperations.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/TransformationMatrix.h
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/TranslateTransformOperation.h
        ${PROJECT_SOURCE_DIR}/render/public/platform/Platform.h
        ${PROJECT_SOURCE_DIR}/render/public/platform/WebBlendMode.h
        ${PROJECT_SOURCE_DIR}/render/public/platform/WebCommon.h
        ${PROJECT_SOURCE_DIR}/render/public/platform/WebDiscardableMemory.h
)

set(RENDER_SOURCES
        ${PROJECT_SOURCE_DIR}/render/core/CoreInitializer.cpp
        ${PROJECT_SOURCE_DIR}/render/core/editing/CompositionUnderlineRangeFilter.cpp
        ${PROJECT_SOURCE_DIR}/render/core/editing/PositionWithAffinity.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/BidiRunForLine.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/ClipRect.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/HitTestLocation.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/HitTestResult.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/HitTestingTransformState.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/InlineBox.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/InlineFlowBox.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/InlineTextBox.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/OrderIterator.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/PointerEventsHitRules.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderBlock.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderBox.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderBoxModelObject.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderFlexibleBox.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderGeometryMap.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderInline.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLayer.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLayerClipper.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLayerStackingNode.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLayerStackingNodeIterator.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderLineBoxList.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderObject.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderObjectChildList.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderParagraph.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderReplaced.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderImage.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderImageResource.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderText.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderTheme.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderTreeAsText.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderView.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RootInlineBox.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/ScrollAlignment.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/SubtreeLayoutScope.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/TextRunConstructor.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/break_lines.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderSliver.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderPlatformView.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderTexture.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderSliverHeader.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderSliverBody.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderScrollView.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/RenderSlider.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/BreakingContext.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/LineBreaker.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/LineWidth.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/line/TrailingObjects.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/AppliedTextDecoration.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/CounterDirectives.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/FillLayer.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/RenderStyle.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/ShadowData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/ShadowList.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleBackgroundData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleBoxData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleFilterData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleFlexibleBoxData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleGradientImage.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleUrlImage.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleInheritedData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleRareInheritedData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleRareNonInheritedData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleSurroundData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleTransformData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/style/StyleVisualData.cpp
        ${PROJECT_SOURCE_DIR}/render/core/rendering/image/ImageResource.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/Decimal.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/Language.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/Length.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/LengthBox.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/LengthFunctions.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/Partitions.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/PurgeableVector.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/SharedBuffer.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/animation/KeyframeValueList.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/animation/TimingFunction.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/exported/Platform.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/exported/WebCommon.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/Character.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/Font.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontCache.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontData.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontDataCache.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontDescription.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontFallbackList.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontFamily.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontFeatureSettings.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/FontPlatformData.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/GlyphPageTreeNode.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/SegmentedFontData.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/SimpleFontData.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/VDMXParser.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/WidthIterator.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/harfbuzz/FontHarfBuzz.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/harfbuzz/HarfBuzzFace.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/harfbuzz/HarfBuzzFaceSkia.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/harfbuzz/HarfBuzzShaper.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/linux/FontPlatformDataLinux.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/mobile/FontCacheMobile.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/skia/FontCacheSkia.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/skia/FontCustomPlatformDataSkia.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/skia/FontPlatformDataSkia.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/skia/SimpleFontDataSkia.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/fonts/opentype/OpenTypeVerticalData.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatPoint.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatPoint3D.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatQuad.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatRect.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatRoundedRect.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/FloatSize.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/IntRect.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/LayoutBoxExtent.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/LayoutRect.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/Region.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/RoundedRect.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/geometry/TransformState.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Color.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ColorSpace.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/DrawLooperBuilder.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/FrameData.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GeneratedImage.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Gradient.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GradientGeneratedImage.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GraphicsContext.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GraphicsContextState.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/GraphicsTypes.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Image.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/PaintPlatformView.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ImageInfo.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ImageFilter.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ImageObserver.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/ImageOrientation.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/StaticTextureImage.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Path.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/PathTraversalState.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/Pattern.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/RegionTracker.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/StrokeData.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/graphics/skia/SkiaUtils.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/BidiCharacterRun.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/BidiContext.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/BidiTextRun.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/LineEnding.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/LocaleToScriptMapping.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/SurrogatePairAwareTextIterator.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextBoundaries.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextBreakIterator.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextBreakIteratorICU.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextBreakIteratorInternalICU.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextRun.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/TextStream.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/UnicodeRange.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/text/UnicodeUtilities.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/AffineTransform.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/InterpolatedTransformOperation.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/Matrix3DTransformOperation.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/MatrixTransformOperation.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/PerspectiveTransformOperation.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/RotateTransformOperation.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/ScaleTransformOperation.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/SkewTransformOperation.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/TransformOperations.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/TransformationMatrix.cpp
        ${PROJECT_SOURCE_DIR}/render/platform/transforms/TranslateTransformOperation.cpp
        ${PROJECT_SOURCE_DIR}/render/public/RendererEngine.cpp
        ${PROJECT_SOURCE_DIR}/render/core/node/Node.cpp
        ${PROJECT_SOURCE_DIR}/render/core/parser/Screen.cpp
        ${PROJECT_SOURCE_DIR}/render/core/parser/ColorMap.cpp
        ${PROJECT_SOURCE_DIR}/render/core/parser/StyleParser.cpp
        ${PROJECT_SOURCE_DIR}/render/core/parser/StyleUpdater.cpp
        ${PROJECT_SOURCE_DIR}/render/core/parser/TransformParser.cpp
)




set_source_files_properties(${RENDER_SOURCES}  PROPERTIES COMPILE_FLAGS "-DNDEBUG -DBLINK_PLATFORM_IMPLEMENTATION=1 -DINSIDE_BLINK -DENABLE_OPENTYPE_VERTICAL=1")


add_library(core STATIC  ${RENDER_HEADERS} ${RENDER_SOURCES})
target_compile_definitions(core PUBLIC BLINK_PLATFORM_IMPLEMENTATION=1 INSIDE_BLINK ENABLE_OPENTYPE_VERTICAL=1)
target_include_directories(core PUBLIC
        ${PROJECT_SOURCE_DIR}/
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/android
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/c
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/codec
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/config
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/core
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/effects
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/encode
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/gpu
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/gpu/gl
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/gpu/mock
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/pathops
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/ports
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/private
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/svg
        ${PROJECT_SOURCE_DIR}/third_party/skia/include/utils
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/lazy/
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/core
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/codec
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/svg
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/shaders
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/utils
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/sfnt
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/opts
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/xml
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/gpu
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/image
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/images
        ${PROJECT_SOURCE_DIR}/third_party/skia/src/sksl
        ${PROJECT_SOURCE_DIR}/third_party/skia/third_party/gif/
        ${PROJECT_SOURCE_DIR}/third_party/icu/
        ${PROJECT_SOURCE_DIR}/garnet/public/
        ${PROJECT_SOURCE_DIR}/render/
        ${PROJECT_SOURCE_DIR}/third_party/harfbuzz/src)

target_link_libraries(core wtf log android icu harfbuzz skia gesture)
